--- a/index.html
+++ b/index.html
@@ -28,9 +28,28 @@
 	</nav>
 	<section id="visual">
 		<h2>LIKE SPACE</h2>
-		<p class="fn-font">LIKE SPACE는 게임, 앱을 개발 및 퍼블리싱하는 회사입니다.
+		<p class="fn-font">LIKE SPACE는 게임,앱을 개발 및 퍼블리싱하는 회사입니다.
 			<br>우리의 게임과 앱은 사용자들에게 최고의 경험을 선사할 것을 약속합니다.
 		</p>
+	</section>
+	<section id="content">
+		<div class="item">
+			<div class="img">
+				<img src="Gunslinger.png">
+			</div>
+			<div class="info">
+				<h4 class="fn-font">건슬레이거(Gunslinger)</h4>
+				<p class="fn-font">
+					랜덤으로 생성되는 적을 총으로 죽이는 간단한 캐주얼 게임입니다.
+				</p>
+				<div class="button-row">
+					<button class="btn fn-font btn-sm"><a target="blank"
+							href="https://play.google.com/store/apps/details?id=com.likespace.gunslinger">PlayStore</a></button>
+					<button class="btn fn-font btn-sm"><a target="blank"
+							href="https://youtu.be/mvdNMVdAmzE">YouTube</a></button>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="content">
 		<div class="item">
@@ -163,11 +182,12 @@
 		<div class="site-footer-wrapper">
 				<p class="footer-country lang">LIKE SPACE</p>
 				<div class="copy-text">
-					<div class="copy-text-block lang"> 사업자등록번호: 180-21-01504</div>
 					<div class="copy-text-block lang"> 통신판매업신고번호: 준비중</div>
+					<div class="copy-text-block lang"> 사업자등록번호: 준비중</div>
 					<div class="copy-text-block lang">대표: 권강빈</div>
 					<div class="copy-text-block lang">이메일 주소: success200655@naver.com</div>
 					<div class="copy-text-block lang">주소: 대한민국 부산광역시 부곡온천천로 170 우편번호 46275</div>
+					<a href="privacy_policy.html">개인정보 처리방침</a>
 					<div class="copy-text-block lang">&copy 2021 Like Space. All rights reserved</div>
 				</div>
 			</div>
