--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		<div class="site-footer-wrapper">
 				<p class="footer-country lang">LIKE SPACE</p>
 				<div class="copy-text">
-					<div class="copy-text-block lang"> 통신판매업신고번호: 준비중</div>
+					<div class="copy-text-block lang"> 통신판매업신고번호: 180-21-01504</div>
 					<div class="copy-text-block lang"> 사업자등록번호: 준비중</div>
 					<div class="copy-text-block lang">대표: 권강빈</div>
 					<div class="copy-text-block lang">이메일 주소: success200655@naver.com</div>
