--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 
 <head>
+	<meta name="google-site-verification" content="cq5REi-8AcWFrUKm5ujN-MTUhfvuoZGYrJ2J0O6_99Y" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
